Potential fix for IOS flicker

--- a/packages/home/frontend/styles/components/slider.css
+++ b/packages/home/frontend/styles/components/slider.css
@@ -66,3 +66,8 @@
 .swiper-button-disabled {
   display: none;
 }
+
+.swiper-slide {
+  -webkit-backface-visibility: hidden; 
+  -webkit-transform: translate3d(0, 0, 0);
+}
